# zeptopm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  channels-example.toml  test-multi.toml  test-orchestrate.toml  zeptopm.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-08-agent-native-cli-design.md  2026-03-08-agent-native-cli-impl.md  2026-03-08-orchestration-design.md  2026-03-08-orchestration-impl.md  2026-03-08-use-cases-and-benefits.md  2026-03-09-agent-channels-design.md  2026-03-09-agent-channels-impl.md  2026-03-09-erlang-patterns-analysis.md  2026-03-09-optional-sandbox-design.md
src/: agent.rs  capsule.rs  config.rs  daemon.rs  lib.rs  llm.rs  main.rs  provider.rs  server.rs  status.rs  worker.rs
src/orchestrator/: engine.rs  mod.rs  planner.rs  review.rs  scheduler.rs  sqlite_store.rs  store.rs  types.rs
tests/: capsule_integration.rs  orchestrator_integration.rs
